fix progress bar alignment for RTL direction

--- a/bootstrap-rtl.css
+++ b/bootstrap-rtl.css
@@ -538,3 +538,8 @@ body {
 .breadcrumb-item + .breadcrumb-item {
     padding-left: 0;
 }
+
+/* -------------------------------- progress -------------------------------- */
+.progress{
+	justify-content: flex-end;
+}
